feat(render): refactor rendering system with LuminGraphics