@@ -4,15 +4,18 @@ import com.github.epsilon.Constants;
 import com.github.epsilon.assets.i18n.EpsilonTranslations;
 import com.github.epsilon.graphics.LuminRenderSystem;
 import com.github.epsilon.graphics.shaders.GlslSandBox;
-import com.github.epsilon.graphics.text.StaticFontLoader;
 import com.github.epsilon.gui.dropdown.DropdownScreen;
-import com.github.epsilon.gui.lib.UiTree;
-import com.github.epsilon.gui.lib.scene.UiLayer;
-import com.github.epsilon.gui.lib.scene.UiScene;
 import com.github.epsilon.gui.panel.PanelScreen;
 import com.github.epsilon.gui.theme.EpsilonUiTheme;
 import com.github.epsilon.gui.theme.MD3Theme;
+import com.github.epsilon.gui.utils.UiCoordinateMapper;
 import com.github.epsilon.modules.impl.ClientSetting;
+import com.github.slmpc.lumingraphics.mc.v2612.runtime.MinecraftUiRuntime2612;
+import com.github.slmpc.lumingraphics.ui.geometry.UiRect;
+import com.github.slmpc.lumingraphics.ui.scene.UiLayer;
+import com.github.slmpc.lumingraphics.ui.scene.UiScene;
+import com.github.slmpc.lumingraphics.ui.text.UiTextMetrics;
+import com.github.slmpc.lumingraphics.ui.tree.UiTree;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.multiplayer.JoinMultiplayerScreen;
@@ -31,13 +34,19 @@ import java.util.List;
 public class MainMenuScreen extends Screen {
 
     public static final MainMenuScreen INSTANCE = new MainMenuScreen();
-
-    private final UiScene scene = new UiScene(EpsilonUiTheme.INSTANCE);
+    private static final String DEFAULT_FONT_ID = "epsilon-default";
+    private static final String JURA_LIGHT_FONT_ID = "epsilon-jura-light";
+    private static final float MENU_TEXT_SCALE = 0.62f;
 
     private final List<MenuEntry> entries = new ArrayList<>();
 
     private LuminRenderSystem.LuminRenderTarget backgroundRenderTarget;
-    private LuminRenderSystem.LuminRenderTarget uiRenderTarget;
+    private UiScene scene;
+    private MinecraftUiRuntime2612 sceneRuntime;
+    private UiTextMetrics textMetrics;
+    private int pendingMouseX;
+    private int pendingMouseY;
+    private boolean overlayPending;
 
     private long introStartMs;
     private boolean initialized;
@@ -97,54 +106,73 @@ public class MainMenuScreen extends Screen {
 
     @Override
     public void extractRenderState(GuiGraphicsExtractor graphics, int mouseX, int mouseY, float a) {
-        final var window = minecraft.getWindow();
-        if (uiRenderTarget == null) {
-            uiRenderTarget = LuminRenderSystem.LuminRenderTarget.create("main-menu-ui", window.getWidth(), window.getHeight());
-        }
-
-        uiRenderTarget.clear();
-        uiRenderTarget.resize(window.getWidth(), window.getHeight());
-        LuminRenderSystem.setActiveTarget(uiRenderTarget);
-
-        scene.beginFrame();
-        drawMenu(LuminRenderSystem.toEpsilonMouseX(mouseX), LuminRenderSystem.toEpsilonMouseY(mouseY));
-        scene.endFrame();
-
-        LuminRenderSystem.setActiveTarget(null);
-        graphics.blit(uiRenderTarget.getIdentifier(), 0, 0, window.getGuiScaledWidth(), window.getGuiScaledHeight(), 0, 1, 1, 0);
+        pendingMouseX = UiCoordinateMapper.toProjectionX(mouseX);
+        pendingMouseY = UiCoordinateMapper.toProjectionY(mouseY);
+        overlayPending = true;
     }
 
-    private void drawMenu(int mouseX, int mouseY) {
+    public void renderPendingOverlay() {
+        if (!overlayPending || minecraft.screen != this) return;
+        overlayPending = false;
+        MinecraftUiRuntime2612 runtime = MinecraftUiRuntime2612.current();
+        ClientSetting.INSTANCE.configureMinecraftFonts(runtime);
+        prepareScene(runtime);
+        runtime.render(scene, activeScene -> drawMenu(activeScene, pendingMouseX, pendingMouseY));
+    }
+
+    private void prepareScene(MinecraftUiRuntime2612 runtime) {
+        if (scene != null && sceneRuntime == runtime) return;
+        releaseScene();
+        runtime.useDefaultFont(DEFAULT_FONT_ID);
+        scene = runtime.createScene(EpsilonUiTheme.lumin());
+        sceneRuntime = runtime;
+        textMetrics = runtime.textMetrics();
+    }
+
+    private void releaseScene() {
+        UiScene previous = scene;
+        scene = null;
+        sceneRuntime = null;
+        textMetrics = null;
+        if (previous != null) previous.close();
+    }
+
+    private void drawMenu(UiScene activeScene, int mouseX, int mouseY) {
         float introProgress = easeOutCubic(Mth.clamp((Util.getMillis() - introStartMs) / 650.0f, 0.0f, 1.0f));
-        int width = LuminRenderSystem.getScaledWidthInt();
-        int height = LuminRenderSystem.getScaledHeightInt();
+        int width = UiCoordinateMapper.getProjectionWidthInt();
+        int height = UiCoordinateMapper.getProjectionHeightInt();
         int buttonCount = entries.size();
         int gapCount = Math.max(0, buttonCount - 1);
         float scale = Mth.clamp((width * 2.0f + height) / 900.0f + 0.08f, 0.72f, 1.24f);
 
         float titleX = Math.max(12.0f * scale, width / 15.0f);
         float titleY = Math.max(8.0f * scale, titleX * 0.5f);
-        float titleScale = 2.36f * scale;
-        float subtitleScale = 0.62f * scale;
         float titleSubtitleGap = 12.0f * scale;
         float titleAccentGap = 6.0f * scale;
         float titleAccentWidth = 68.0f * scale;
         float titleAccentHeight = Math.max(1.6f, 1.8f * scale);
 
-        float rowInset = Math.clamp(14.0f * scale, width / 12.0f, width * 0.5f);
+        float rowInset = Math.min(14.0f * scale, width * 0.5f);
         float availableRowWidth = Math.max(0.0f, width - rowInset * 2.0f);
         float minButtonWidth = 42.0f * scale;
-        float buttonGap = gapCount == 0 ? 0.0f : Math.clamp((availableRowWidth - buttonCount * minButtonWidth) / gapCount, 0.0f, 10.0f * scale);
-        float maxButtonWidth = Math.max(0.0f, (availableRowWidth - gapCount * buttonGap) / Math.max(1, buttonCount));
-        float buttonWidth = Math.min(112.0f * scale, maxButtonWidth);
-        float totalButtonsWidth = buttonCount * buttonWidth + gapCount * buttonGap;
+        String[] labels = new String[buttonCount];
+        float[] buttonWidths = new float[buttonCount];
+        float labelsWidth = 0.0f;
+        for (int index = 0; index < buttonCount; index++) {
+            labels[index] = localizedTitle(entries.get(index).title);
+            buttonWidths[index] = Math.max(minButtonWidth,
+                    textMetrics.textWidth(labels[index], MENU_TEXT_SCALE, null));
+            labelsWidth += buttonWidths[index];
+        }
+        float buttonGap = gapCount == 0 ? 0.0f
+                : Math.clamp((availableRowWidth - labelsWidth) / gapCount, 0.0f, 10.0f * scale);
+        float totalButtonsWidth = labelsWidth + gapCount * buttonGap;
         float buttonsStartX = (width - totalButtonsWidth) * 0.5f;
         float buttonLineHeight = Math.max(2.0f, 2.0f * scale);
         float buttonHitPaddingX = 8.0f * scale;
         float buttonHitPaddingTop = 6.0f * scale;
         float buttonHitHeight = 26.0f * scale;
         float buttonRevealDistance = 18.0f * scale;
-        float preferredButtonTextScale = 0.90f * scale;
         float buttonTextOffsetY = 5.5f * scale;
         float targetButtonsY = height - Math.min((width + height * 2.0f) / 25.0f, 54.0f * scale);
         float buttonsY = Math.min(targetButtonsY, height - buttonHitHeight + buttonHitPaddingTop);
@@ -156,15 +184,15 @@ public class MainMenuScreen extends Screen {
         String title = "EPSILON";
         String subtitle = Constants.VERSION;
 
-        float titleHeight = scene.scheduler().textMetrics().getHeight(titleScale, StaticFontLoader.JURA_LIGHT);
+        float titleHeight = textMetrics.textHeight(MENU_TEXT_SCALE, null);
         float subtitleY = titleY + titleHeight + titleSubtitleGap;
 
         UiTree tree = UiTree.build(scope -> {
             scope.layer(0, layer -> layer.rect(titleX, titleY + titleHeight + titleAccentGap,
                     titleAccentWidth, titleAccentHeight, accentColor));
             scope.layer(10, layer -> {
-                layer.text(title, titleX, titleY, titleScale, titleColor, StaticFontLoader.JURA_LIGHT);
-                layer.text(subtitle, titleX, subtitleY, subtitleScale, subtitleColor);
+                layer.text(title, titleX, titleY, MENU_TEXT_SCALE, titleColor);
+                layer.text(subtitle, titleX, subtitleY, MENU_TEXT_SCALE, subtitleColor);
             });
             for (int index = 0; index < entries.size(); index++) {
                 MenuEntry entry = entries.get(index);
@@ -175,7 +203,12 @@ public class MainMenuScreen extends Screen {
                     continue;
                 }
 
-                float drawX = buttonsStartX + index * (buttonWidth + buttonGap);
+                float buttonX = buttonsStartX;
+                for (int previous = 0; previous < index; previous++) {
+                    buttonX += buttonWidths[previous] + buttonGap;
+                }
+                float drawX = buttonX;
+                float buttonWidth = buttonWidths[index];
                 float drawY = buttonsY + (1.0f - appear) * buttonRevealDistance;
                 boolean hovered = entry.isHovered(mouseX, mouseY);
                 entry.hoverProgress = Mth.lerp(hovered ? 0.24f : 0.16f, entry.hoverProgress, hovered ? 1.0f : 0.0f);
@@ -203,17 +236,19 @@ public class MainMenuScreen extends Screen {
                     layer.rect(drawX, buttonY, buttonWidth, buttonLineHeight, MD3Theme.lerp(lineBase, lineHover, hover));
                 });
 
-                String label = localizedTitle(entry.title);
-                float labelWidth = scene.scheduler().textMetrics().getWidth(label, preferredButtonTextScale);
-                float buttonTextScale = labelWidth > buttonWidth && labelWidth > 0.0f
-                        ? preferredButtonTextScale * buttonWidth / labelWidth
-                        : preferredButtonTextScale;
+                String label = labels[index];
                 float textY = buttonY + buttonTextOffsetY;
-                scope.layer(10, layer -> layer.text(label, drawX, textY, buttonTextScale, labelColor));
+                scope.layer(10, layer -> layer.text(label, drawX, textY, MENU_TEXT_SCALE, labelColor));
             }
         });
 
-        scene.submit(UiLayer.CONTENT, tree);
+        activeScene.submit(UiLayer.CONTENT, tree);
+    }
+
+    private static float easeOutCubic(float value) {
+        float t = Mth.clamp(value, 0.0f, 1.0f);
+        float inv = 1.0f - t;
+        return 1.0f - inv * inv * inv;
     }
 
     private static String localizedTitle(String title) {
@@ -226,12 +261,6 @@ public class MainMenuScreen extends Screen {
         };
     }
 
-    private static float easeOutCubic(float value) {
-        float t = Mth.clamp(value, 0.0f, 1.0f);
-        float inv = 1.0f - t;
-        return 1.0f - inv * inv * inv;
-    }
-
     private static Color applyAlpha(Color color, float alphaFactor) {
         float factor = Mth.clamp(alphaFactor, 0.0f, 1.0f);
         return new Color(color.getRed(), color.getGreen(), color.getBlue(), Math.round(color.getAlpha() * factor));
@@ -239,31 +268,28 @@ public class MainMenuScreen extends Screen {
 
     @Override
     public boolean mouseClicked(MouseButtonEvent event, boolean doubleClick) {
-        if (event.button() == 0) {
+        MouseButtonEvent epsilonEvent = UiCoordinateMapper.toProjectionEvent(event);
+        if (epsilonEvent.button() == 0) {
             for (MenuEntry entry : entries) {
-                MouseButtonEvent epsilonEvent = LuminRenderSystem.toEpsilonMouseEvent(event);
                 if (entry.isHovered(epsilonEvent.x(), epsilonEvent.y())) {
                     entry.action.run();
                     return true;
                 }
             }
         }
-        return super.mouseClicked(LuminRenderSystem.toEpsilonMouseEvent(event), doubleClick);
+        return super.mouseClicked(epsilonEvent, doubleClick);
     }
 
     @Override
     public void removed() {
         super.removed();
+        releaseScene();
         initialized = false;
+        overlayPending = false;
         if (backgroundRenderTarget != null) {
             backgroundRenderTarget.close();
             backgroundRenderTarget = null;
         }
-        if (uiRenderTarget != null) {
-            uiRenderTarget.close();
-            uiRenderTarget = null;
-        }
-        scene.close();
     }
 
     @Override
